refactor to use JavaFX transformations correctly (SketchPane)